# nexus32-romtools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: lz4.c  lz4.h  romcheck.c  rominspect.c  rompack.c
src/common/: asset_dir.c  asset_dir.h  crc32.c  crc32.h  rom_header.c  rom_header.h  rom_validate.c  rom_validate.h
test/minimal/: pack.toml
